# restaurant_kitchen_manager

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: db_diagram.drawio
kitchen/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
kitchen/fixtures/: initial_data.json
kitchen/migrations/: 0001_initial.py  0002_seed_initial_data.py
kitchen/templates/kitchen/: confirm_delete.html  cook_detail.html  cook_list.html  dish_detail.html  dish_list.html  dish_type_list.html  form.html  index.html  ingredient_list.html
kitchen_service/: settings.py  urls.py
static/css/: styles.css
templates/: base.html
templates/includes/: pagination.html
templates/registration/: login.html
